# tetris_ai_runner

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  ai.cpp  ai_ax.cpp  ai_ax.h  demo.vcxproj  demo.vcxproj.filters  dllmain.c  eval.cpp  gason.vcxproj  land_point_search_path.cpp  land_point_search_path.h  land_point_search_simple.cpp  land_point_search_simple.h  random.cpp  random.h  rule_st.cpp  rule_st.h  tetris_ai_dll.vcxproj  tetris_ai_dll.vcxproj.filters  tetris_ai_runner.sln  tetris_ai_runner.vcxproj  tetris_ai_runner.vcxproj.filters  tetris_ai_runner2012.sln  tetris_ai_runner2012.vcxproj  tetris_ai_runner2012dll.vcxproj  tetris_ai_runner2013.sln  tetris_ai_runner2013.vcxproj  tetris_ai_runner2013.vcxproj.filters  tetris_ai_runner2013dll.vcxproj  tetris_core.cpp  tetris_core.h  the_ai_games.vcxproj  top_bot.vcxproj  top_pso.vcxproj
.github/workflows/: main.yml
gason/: gason.cpp  gason.h
src/: ai.cpp  ai_ax.cpp  ai_ax.h  ai_easy.h  ai_farter.cpp  ai_farter.h  ai_farteryhr.cpp  ai_farteryhr.h  ai_misaka.cpp  ai_misaka.h  ai_tag.cpp  ai_tag.h  ai_zzz.cpp  ai_zzz.h  base_tree.h  botris.cpp  bs_tree.h  bst_base.h  chash.h  chash_map.h  chash_set.h  cmd_tris.cpp  demo.cpp  dllmain.c  integer_utils.cpp  integer_utils.h  land_point_search_cautious.cpp  land_point_search_cautious.h  land_point_search_path.cpp  land_point_search_path.h  land_point_search_simple.cpp  land_point_search_simple.h  land_point_search_simulate.cpp  land_point_search_simulate.h  land_point_search_tag.cpp  land_point_search_tag.h  land_point_search_tspin.cpp  land_point_search_tspin.h  ppt_pso.cpp  pso.cpp  (+45 more)
